# AgentOS

./: .gitignore  AGENTS.md  CODING_STANDARDS.md  Cargo.toml  LICENSE  PLAN.md  README.md  SPEC.md  package-lock.json  package.json
.playwright/: cli.config.json
companion-core/: Cargo.toml
companion-core/src/: config.rs  downloader.rs  lib.rs
companion-core/src/agent/: mod.rs  omp_sidecar.rs
companion-core/src/asr/: aliyun_asr.rs  mock.rs  mod.rs  whisper_cloud.rs  whisper_local.rs  xiaomi_asr.rs
companion-core/src/audio/: capture.rs  mod.rs  utils.rs  vad.rs
companion-core/src/emotion/: mod.rs
companion-core/src/inject/: mod.rs  text_reader.rs
companion-core/src/llm/: mod.rs
companion-core/src/tools/: command_tools.rs  mod.rs
companion-core/src/tts/: mod.rs  playback.rs
companion-core/tests/: e2e_tests.rs  sidecar_tests.rs
companion-tauri/: Cargo.toml  tauri.conf.json
companion-tauri/capabilities/: default.json
companion-tauri/src/: lib.rs  main.rs  voice_handler.rs
companion-tauri/src/state/: mod.rs
docs/api/: README.md
scripts/: asr_server.py  browser-screenshot.mjs  debug-ui.sh  tts_server.py  verify-tauri.sh  verify-ui.sh  verify.sh
services/agent-sidecar/: README.md  debug-config.ts  package.json  test-agent.ts  test-api-call.ts  test-imports.ts  test-tools.ts  tsconfig.json
services/agent-sidecar/src/: agent.test.ts  agent.ts  audio.ts  audio_test_helpers.ts  config.ts  index.ts  protocol.ts  sandbox.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture_mgr.rs  config.rs  lib.rs  main.rs
src-tauri/src/agent/: mod.rs  omp_rpc.rs
src-tauri/src/asr/: mod.rs  xiaomi_asr.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/emotion/: mod.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/inject/: clipboard.rs  keyboard.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/permissions/: audit.rs  mod.rs
src-tauri/src/sandbox/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/tools/: command_tools.rs  file_tools.rs  mod.rs
src-tauri/src/tts/: mock.rs  mod.rs  xiaomi_tts.rs
src-tauri/src/websocket/: mod.rs
src-tauri/tests/: omp_integration_test.rs
web/: avatar.html  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
web/public/: avatar.html  models-manifest.json
web/public/avatar-agent/: index.html
web/public/avatar-agent/assets/: index-CeOofDrQ.js  index-x-ty9mcd.css  index.es-DFO_Kadx.js
web/public/live2d/models/Epsilon/: Epsilon_expressions_t02.can3  Epsilon_motions_t02.can3  Readme.txt
web/public/live2d/models/haru/: haru.model3.json
web/public/live2d/models/haru_greeter_pro_jp/: ReadMe.txt
web/public/live2d/models/hiyori_movie_pro_zh/: ReadMe.txt  hiyori_movie_pro_t02.can3
web/public/live2d/models/miku_pro_jp/: ReadMe.txt
web/src/: App.vue  style.css
web/src/avatar/: main.ts
web/src/avatar/demo/: lappdefine.ts  lappdelegate.ts  lapplive2dmanager.ts  lappmodel.ts  lappview.ts  lappwavfilehandler.ts
web/src/components/: Live2DCanvas.vue  MarkdownRenderer.vue
web/src/composables/: useCompanion.ts
web/src/live2d/: globals.d.ts
web/src/live2d/model/: cubismmoc.ts  cubismmodel.ts
web/src/live2d/rendering/: cubismoffscreenrendertarget_webgl.ts  cubismrenderer_webgl.ts
web/src/live2d/shaders/: shaders.ts
web/src/router/: index.ts
web/src/stores/: app.ts
web/src/types/: ipc.ts
web/src/views/: AvatarView.vue  ChatView.vue  Live2DSettings.vue  SettingsView.vue
web/tests/: smoke.spec.ts
(+7 files in other folders)
