[package]
name = "companion-tauri"
version = "0.1.0"
description = "Companion — Tauri desktop application shell"
authors = ["Companion Contributors"]
license = "MIT"
repository = "https://github.com/your-org/companion"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
companion-core = { path = "../companion-core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
enigo = "0.6"
image = "0.25"
crossbeam = "0.8"
dirs = "6"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "multipart"] }
