[package]
name = "companion-core"
version = "0.1.0"
description = "Companion — cross-platform modular desktop agent core"
authors = ["Companion Contributors"]
license = "MIT"
repository = "https://github.com/your-org/companion"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "companion_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "companion"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
cpal = "0.15"
dirs = "6"
hound = "3"
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
chrono = "0.4"
crossbeam = "0.8"
image = "0.25"

# Global hotkeys / text injection / TTS playback
rdev = "0.5"
enigo = "0.6"
arboard = "3"
tempfile = "3"

[target.'cfg(target_os = "windows")'.dependencies]
